--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#141414">
-  <meta name="title" content="Angular Movies">
-  <meta name="keyword"
-    content="Movies, TV Shows, Reviews, API, Actors, Actresses, Photos, User Ratings, Synopsis, Trailers, Teasers, Credits, Cast">
-  <meta name="description" content="Angular Movies Database using TMDB API">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="Movies and TVShows">
-  <meta property="og:url" content="https://flixmovies-82298.web.app/">
-  <meta property="og:title" content="Angular Movies - Database">
-  <meta property="og:description" content="Angular Movies Database using TMDB API">
-  <meta property="og:image"
-    content="https://www.themoviedb.org/assets/2/v4/icons/mstile-144x144-30e7905a8315a080978ad6aeb71c69222b72c2f75d26dab1224173a96fecc962.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="angular_movies_database">
-  <meta property="twitter:url" content="https://flixmovies-82298.web.app/">
-  <meta property="twitter:title" content="Angular Movies - Database">
-  <meta property="twitter:description" content="Angular Movies Database using TMDB API">
-  <meta property="twitter:image"
-    content="https://www.themoviedb.org/assets/2/v4/icons/mstile-144x144-30e7905a8315a080978ad6aeb71c69222b72c2f75d26dab1224173a96fecc962.png">
+  <meta name="description" content="A Angular movie web application.">
+  <meta name="keywords" content="HTML,sass,scss,JavaScript,js,Angular8">
+  <meta name="author" content="Abid Akram">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -36,7 +19,6 @@
 
 <body>
   <app-root></app-root>
-
 </body>
 
 </html>
