--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,16 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700|Nunito:400,600&display=swap"
     rel="stylesheet">
-</head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+</head>
+<div class="paybtn">
 <body>
   <app-root></app-root>
+  <div class="paybtn">
+    <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_H3zOvXiGhuZElP" async> </script> </form>
+  </div>
+
 </body>
 
 </html>
