--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,52 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>AngularMovieAppV2</title>
+  <title>Browse Movies, TV Shows and People</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.css"/>
-  
+  <meta name="description" content="Browse Movies, TV Shows and People">
+  <meta name="author" content="Abid Akram">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:title" content="Movies App">
+  <meta property="og:description" content="Browse Movies, TV Shows and People">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://movies.abidakram.com">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Movies">
+  <meta name="twitter:description" content="Browse Movies, TV Shows and People">
+  <meta name="twitter:site" content="@abidakramk">
+  <meta name="twitter:creator" content="@abidakramk">
+  <meta name="twitter:image" content="https://movies.abidakram.com">
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N3J2MBP4');</script>
+  <!-- End Google Tag Manager -->
+
 </head>
+
 <body>
   <app-root></app-root>
- 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HWEEK7BMJX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HWEEK7BMJX');
+</script>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3J2MBP4"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
+
 </html>
